[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-rl"
version = "0.1.0"
description = "Gymnasium-compatible ODE control environment framework with pluggable plants and rewards"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.21.0",
    "stable-baselines3>=2.0.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
include = ["custom_rl*"]
